--- a/README
+++ b/README
@@ -3,3 +3,9 @@ Get relative scaling factors
 
 Install it using *setup.py* if you prefer not to operate from within this
 directory.
+
+An example how to invoke these skripts is given in *example_run.py* including
+some remarks.
+
+The entire procedure assumes that stations are "relatively close together", like
+in a local network or array.
