--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-Get relative scaling factors
-----------------------------
+# Get relative scaling factors
 
 Install it using *setup.py* if you prefer not to operate from within this
 directory.
